# minerva

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  tw-rules.yaml
.github/workflows/: run_tests.yaml
experiments/: categorical.py  linear.py  minervaexperiment.yml  normalsmile.py  tools.py
experiments/experiment_1/: benchmarks.py  exp1env.yml  experiment_1.ipynb  explore.ipynb  minervarunner.py  notes.md  tools.py
experiments/experiment_1/categorical_only/: exclusion.ipynb  minervarunner.py  notes.md  weight_history.ipynb
experiments/experiment_1/data/: data.csv  large.csv
experiments/experiment_1/full/: accuracy.ipynb  accuracy.py  benchmarks.ipynb  benchmarks.py  boruta.py  explore_selector.ipynb  minervarunner.py
experiments/experiment_2/: accuracy.ipynb  accuracy.py  accuracy_flaml.py  benchmarks.ipynb  benchmarks.py  boruta.ipynb  boruta.py  data_synthesis.ipynb  exp2env.yml  explore_selector.ipynb  hiselrunner.py  minervarunner.py  tools.py  utils.py
experiments/experiment_3/: accuracy.py  accuracy_fraud_with_flaml.py  accuracy_results_with_flaml.md  benchmarks.py  boruta.py  card_data.py  constants.py  exp3env.yml  hiselrunner.py  minervarunner.py  tools.py  utils.py
minerva/: __init__.py  donsker_varadhan.py  embedder.py  feature_selection.py  iterable_dataset.py  normalize.py  select.py
notebooks/: categorical.ipynb  linear.ipynb  normalsmile.ipynb
paper/tex/: bibliography.bib  main.tex  mypaper.cls
tests/: donsker_varadhan_test.py  embedder_test.py  iterable_dataset_test.py  normalize_test.py  select_test.py
(+30 files in other folders)
